--- a/style.css
+++ b/style.css
@@ -649,9 +649,7 @@ footer{
 /* Media for mobiles */
 @media (min-width:320px) and  (max-width:480px){
         
- .main{
-  height: max-content;
- } 
+ 
   #wrapper{
     height: 100vh;
     overflow-y:auto;
@@ -684,7 +682,7 @@ footer{
       }
       
       .logo-text{
-          margin-left: -1em;
+          margin-left: -.8rem;
           font-size: 15px;
       }
       .nav-items{
@@ -810,6 +808,7 @@ footer{
         filter: grayscale(1);
         transition: all 3s;
         animation: scaleImage 5s linear infinite;
+        align-content: center;
         right:7rem;
         top: 12rem;
     
@@ -1048,7 +1047,7 @@ footer{
         align-items: center;
         gap: 30px;
         top: -29%;
-        height: 900px;
+        height: auto;
         width: 100%;
        }
         
@@ -1132,7 +1131,7 @@ footer{
       
       .contactus-form-container{
         width: 100%;
-        height: 80%;
+        height: 75%;
         background-color:rgb(231,231,231) ;
       }
       
@@ -1304,7 +1303,7 @@ footer{
       }
       
       .logo-text{
-          margin-left: -1em;
+          margin-left: -.8rem;
           font-size: 15px;
       }
       .nav-items{
@@ -1313,7 +1312,7 @@ footer{
           padding: 0 1rem;
       }
       .nav-items div{
-          font-size: 10px;
+          font-size: 15px;
           font-weight: 500;
           cursor: pointer;
       }
@@ -1347,7 +1346,7 @@ footer{
         font-size: 3em;
         color: rgb(231,231,231);
     
-        bottom: -49%;
+        bottom: -56%;
         left: 0%;
         font-weight: bold;
         transition: all 3s;
@@ -1374,6 +1373,7 @@ footer{
     .hero-section-sub-heading{
         font-size: 25px;
         line-height: 45px;
+        text-align: center;
     }
     .hero-section-description{
         margin-top: 1rem;
@@ -1400,10 +1400,10 @@ footer{
         content: "";
         position: absolute;
         background-color: #fff;
-        top: 0px;
+        top: 0;
         left: 0;
         right: 0;
-        bottom: 0px;
+        bottom: 0 ;
         z-index: -1;
         transform: scaleX(0);
         transform-origin: left;
@@ -1418,6 +1418,7 @@ footer{
       }
       .hero-section-right{
         position: relative;
+        
      
       }
       .absolute{
@@ -1430,9 +1431,8 @@ footer{
         filter: grayscale(1);
         transition: all 3s;
         animation: scaleImage 5s linear infinite;
-        right:7rem;
+        right: 17.5rem;
         top: 12rem;
-    
       }
       .user-image img{
         z-index: -9;
@@ -1568,46 +1568,49 @@ footer{
        }
       
        .project-content-left{
-         top: 5%;
+         top: 15%;
          left:3%;
        }
        .project-content-right{
-        left:3%;
+        left:5%;
+        top: 15%;
        }
       
        .project-skills-container{
-        width: 80%;
+        width: 70%;
         display: flex;
         gap: 9px;
+        
         flex-wrap: wrap;
        }
       
        .project-skill{
-        width: 15px;
+        width: 35px;
        }
       
        .project-heading{
-        font-size: 15px;
+        font-size: 35px;
         font-weight: bold;
         line-height: 1rem;
        }
       
        .project-sub-heading{
-        width: 70%;
-        font-size: 8px;
+        width: 90%;
+        font-size: 15px;
         font-style: italic;
        }
       
        .btn-grp{
         display: flex;
         gap: 0.9rem;
-        font-size: 10px;
+        font-size: 15px;
        }
        
        .btn-project{
-        font-size: 10px;
+        font-size: 12px;
         padding:.2rem!important ;
-        width: 80px;
+        width: 100px;
+        height: 45px;
        }
 
        .btn-project:hover{
@@ -1618,7 +1621,7 @@ footer{
        .icon{
         cursor: pointer;
         color: white;
-        font-size: 15px;
+        font-size: 25px;
         transition: 0.4s;
        }
       
@@ -1631,7 +1634,8 @@ footer{
        }
        #project1{
         background-image: url(projects/Project1.png);
-        width: 420px;
+        padding: 3.5rem;
+        width: 620px;
         height: 220px;
 
        }
@@ -1639,20 +1643,24 @@ footer{
        #project2{
         margin-left: 0;
         background-image: url(projects/Project2.png);
-        width: 420px;
+        width: 620px;
         height: 220px;
+        padding: 3.5rem;
        }
       
        #project3{
         background-image: url(projects/Project3.png);
-        width: 420px;
+        padding: 3.5rem;
+        width: 620px;
         height: 220px;
+     
        }
       
        #project4{
         margin-left: 0;
         background-image: url(projects/Project4.png);
-        width: 420px;
+        padding: 3.5rem;
+        width: 620px;
         height: 220px;
        }
       
@@ -1667,8 +1675,8 @@ footer{
         justify-content: center;
         align-items: center;
         gap: 30px;
-        top: -29%;
-        height: 900px;
+        top: 3%;
+        height: 600px;
         width: 100%;
        }
         
@@ -1679,13 +1687,13 @@ footer{
        }
        
        .skill-container-right{
-        width:100%;
+        width: 50%;
         display: flex;
         flex-wrap: wrap;
         position: relative;
-        right:35%;
-        bottom: -45%;
-        gap: 1rem;
+        right:5%;
+        bottom: 0%;
+        gap: 2rem;
         justify-content: center;
       
        }
@@ -1695,8 +1703,8 @@ footer{
         font-size: 5rem;
         font-style: bold;
         color: rgb(231,231,231);
-        bottom: -20.5%;
-        right: 14%;
+        bottom: 0%;
+        right: 10%;
         user-select: none;
         /* overflow-y: hidden; */
        }
@@ -1752,7 +1760,7 @@ footer{
       
       .contactus-form-container{
         width: 100%;
-        height: 80%;
+        height: 75%;
         background-color:rgb(231,231,231) ;
       }
       
@@ -1811,7 +1819,8 @@ footer{
         margin: 1rem 0;
         width: auto;
         text-align: center;
-        left: 1.5rem;
+        left: 7.5rem;
+      
       }
       
       #submit-btn:hover{
